--- a/src/main/resources/templates/together/board/board.html
+++ b/src/main/resources/templates/together/board/board.html
@@ -96,7 +96,7 @@
             <input type="search" name="keyword" class="form-control form-control-dark" placeholder="검색" aria-label="Search">
             </div>
         </form>
-        <a class="btn btn-secondary" href="#" th:href="@{'/together/' + ${together.path} + '/board/create'}">
+        <a class="btn btn-secondary" th:href="@{'/together/' + ${together.path} + '/board/create'}">
             <i class="fa fa-pencil"></i> 글쓰기
         </a>
     </div>
