--- a/src/main/resources/templates/together/create.html
+++ b/src/main/resources/templates/together/create.html
@@ -65,7 +65,7 @@
                 <small class="form-text text-danger" th:if="${#fields.hasErrors('longIntroduce')}" th:errors="*{longIntroduce}"></small>
             </div>
             <div class="form-group mt-2">
-                <button class="btn btn-primary btn-block" type="submit"
+                <button class="btn btn-secondary btn-block d-gird" type="submit"
                         aria-describedby="submitHelp">투게더 만들기</button>
             </div>
         </form>
