--- a/src/main/resources/templates/together/settings.html
+++ b/src/main/resources/templates/together/settings.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div th:replace="fragments.html :: together-info"></div>
     <div th:replace="fragments.html :: together-menu (settings)"></div>
-    <form th:if="${!together.useBanner}" th:action="@{'/together/' + ${together.getPath()} + '/settings/banner/enable'}" method="post" novalidate>
+    <form th:if="${!together.useBanner}" th:action="@{'/together/' + ${together.pathEncoder()} + '/settings/banner/enable'}" method="post" novalidate>
         <div class="alert alert-primary" role="alert">
             투게더 상단에 이미지 파일을 이용한 배너를 사용합니다.
         </div>
@@ -16,7 +16,7 @@
             <button class="btn btn-outline-primary btn-block" type="submit" aria-describedby="submitHelp">배너 이미지 사용하기</button>
         </div>
     </form>
-    <form th:if="${together.useBanner}" th:action="@{'/together/' + ${together.getPath()} + '/settings/banner/disable'}" method="post" novalidate>
+    <form th:if="${together.useBanner}" th:action="@{'/together/' + ${together.pathEncoder()} + '/settings/banner/disable'}" method="post" novalidate>
         <div class="alert alert-info" role="alert">
             투게더 상단에 배너를 올리지 않습니다. 배너가 없어지는것은 아니며 검색 시에 노출되는 투게더 정보에 이용됩니다.
         </div>
@@ -24,7 +24,7 @@
             <button class="btn btn-outline-primary btn-block" type="submit" aria-describedby="submitHelp">배너 이미지 사용하지 않기</button>
         </div>
     </form>
-    <form id="imageForm" th:action="@{'/together/' + ${together.getPath()} + '/settings/banner'}" method="post" novalidate>
+    <form id="imageForm" th:action="@{'/together/' + ${together.pathEncoder()} + '/settings/banner'}" method="post" novalidate>
         <div class="form-group">
             <input id="togetherImage" type="hidden" name="image" class="form-control" />
         </div>
@@ -48,7 +48,7 @@
             <div id="cropped-new-together-image" class="mt-3"></div>
         </div>
     </div>
-    <form th:if="${!together.published && !together.closed}" th:action="@{'/together/' + ${together.getPath()} + '/settings/publish'}" method="post" novalidate>
+    <form th:if="${!together.published && !together.closed}" th:action="@{'/together/' + ${together.pathEncoder()} + '/settings/publish'}" method="post" novalidate>
         <div class="alert alert-info mt-3" role="alert">
             투게더를 다른 사용자에게 공개할 준비가 되었다면 버튼을 클릭하세요.<br/>
             소개, 배너 이미지, 투게더 주제 및 활동 지역을 전부 등록하셨나요? 공개하는 순간 다시 비공개로 돌릴 수 없습니다.<br/>
@@ -58,7 +58,7 @@
             <button class="btn btn-outline-primary" type="submit" aria-describedby="submitHelp">투게더 공개</button>
         </div>
     </form>
-    <form th:if="${together.published && !together.closed}" th:action="@{'/together/' + ${together.getPath()} + '/settings/close'}" method="post" novalidate>
+    <form th:if="${together.published && !together.closed}" th:action="@{'/together/' + ${together.pathEncoder()} + '/settings/close'}" method="post" novalidate>
         <div class="alert alert-warning mt-3" role="alert">
             해당 투게더의 목적을 달성했다면 투게더를 종료하세요.<br/>
             투게더를 종료하면 더 이상 멤버를 모집하거나 모임을 만들 수 없으며, 투게더 경로와 이름을 수정할 수 없습니다.<br/>
@@ -97,8 +97,8 @@
 </div>
 <div
 <div th:replace="fragments.html :: footer"></div>
-<div th:replace="fragments.html :: update-tags (baseUrl='/together/'+${together.getPath()} + '/settings')"></div>
-<div th:replace="fragments.html :: update-zones (baseUrl='/together/'+${together.getPath()} + '/settings')"></div>
+<div th:replace="fragments.html :: update-tags (baseUrl='/together/'+${together.pathEncoder()} + '/settings')"></div>
+<div th:replace="fragments.html :: update-zones (baseUrl='/together/'+${together.pathEncoder()} + '/settings')"></div>
 <link href="/node_modules/cropper/dist/cropper.min.css" rel="stylesheet">
 <script src="/node_modules/cropper/dist/cropper.min.js"></script>
 <script src="/node_modules/jquery-cropper/dist/jquery-cropper.min.js"></script>
