--- a/src/main/resources/templates/account/settings.html
+++ b/src/main/resources/templates/account/settings.html
@@ -11,7 +11,7 @@
         <span th:text="${message}">완료</span>
       </div>
       <h1 class="mb-0" th:text="${account.getNickname()}"></h1>프로필 설정
-      <form class="row" th:action="@{/settings/} + ${account.getNickname()}" th:object="${settingsForm}" method="post" novalidate>
+      <form class="row" th:action="@{'/settings/'+ ${account.getNickname()}}" th:object="${settingsForm}" method="post" novalidate>
         <div class="col-9">
           <div class="form-group mt-1">
             <label for="nickname">닉네임 변경</label>
