--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,12 +11,12 @@
         <h2>로그인</h2>
     </div>
     <div class="row justify-content-center">
-        <div th:if="${param.error}" class="alert alert-danger text-center col-sm-6 d-grid" role="alert">
-            <p>이메일이나 닉네임, 비밀번호를 확인해주세요.</p>
+        <div th:if="${param.error}" class="alert alert-danger text-center col-sm-6" role="alert">
+            이메일이나 닉네임, 비밀번호를 확인해주세요.
         </div>
     </div>
     <div class="row justify-content-center ">
-        <form class="needs-validation col-sm-6 d-grid gap-4" action="#" th:action="@{/login}" method="post" novalidate>
+        <form class="needs-validation col-sm-6 d-grid gap-4" th:action="@{/login}" method="post" novalidate>
             <div class="form-group">
                 <label for="username">email 혹은 닉네임</label>
                 <input id="username" type="text" name="username" class="form-control"
@@ -32,7 +32,7 @@
                 <input id="password" type="password" name="password" class="form-control"
                        aria-describedby="passwordHelp">
                 <small id="passwordHelp" class="form-text text-muted">
-                    <a th:href="@{/email-login}">패스워드를 잊어버리셨다구요?</a>
+                    <a th:href="@{/lost-password}">패스워드를 잊어버리셨다구요?</a>
                 </small>
                 <small class="invalid-feedback">패스워드를 입력하세요.</small>
             </div>
@@ -40,9 +40,8 @@
                 <input type="checkbox" class="form-check-input" id="rememberMe" name="remember-me" checked>
                 <label class="form-check-label" for="rememberMe" aria-describedby="rememberMeHelp">로그인 유지</label>
             </div>
-            <div class="form-group text-center">
-                <button class="btn btn-success btn-block" type="submit"
-                        aria-describedby="submitHelp">로그인</button>
+            <div class="form-group text-center d-grid">
+                <button class="btn btn-secondary btn-block" type="submit" aria-describedby="submitHelp">로그인</button>
                 <p>
                     <small id="submitHelp" class="form-text text-muted">
                         계정이 없으시다면 <a th:href="@{/create-account}">회원가입</a> 하시기 바랍니다.
