--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -174,7 +174,7 @@
                                     <a class="dropdown-item" th:href="@{'/notice'}"><h2>알림</h2></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" th:href="@{'/settings/profile'}"><h2>설정</h2></a>
+                                    <a class="dropdown-item" th:href="@{'/settings/' + ${#authentication.name}}"><h2>설정</h2></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="dropdown-item" th:href="@{'/together/create'}"><h2>투게더 만들기</h2></a>
