--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,6 +48,7 @@
                     </small>
                 </p>
             </div>
+            <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
         </form>
     </div>
 </div>
