계정 삭제, 회원 가입 약관

--- a/src/main/resources/templates/account/initial-setting.html
+++ b/src/main/resources/templates/account/initial-setting.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div class="form-group mt-1">
-                        <button class="btn btn-primary btn-block" type="submit" aria-describedby="summitHelp">설정 완료</button>
+                        <button class="btn btn-secondary btn-block d-gird" type="submit" aria-describedby="summitHelp">설정 완료</button>
                     </div>
                 </div>
             </form>
