--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
         <div class="col-md-12 mx-auto my-5">
             <h1 class="display-3 fw-normal">같이하면 더 가치있다</h1>
             <p class="lead fw-normal">모임 웹 서비스 가치하자</p>
-            <a class="btn btn-outline-secondary">회원가입</a>
+            <a class="btn btn-outline-secondary" href="/create-account">회원가입</a>
         </div>
     </div>
 </div>
