--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,7 +48,9 @@
                     </small>
                 </p>
             </div>
-            <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+            <a class="text-center" href="/oauth2/authorization/google">
+                <img src="/images/GoogleLoginButton.png">
+            </a>
         </form>
     </div>
 </div>
