--- a/src/main/resources/templates/create-account.html
+++ b/src/main/resources/templates/create-account.html
@@ -11,6 +11,13 @@
         <h2>회원 가입</h2>
     </div>
     <div class="row justify-content-center">
+        <div class="row justify-content-center">
+        <div class="alert alert-danger text-center col-sm-10" role="alert">
+            본 사이트 "가치하자"는 개인 프로젝트를 위해 제작되었습니다. <br>
+            사이트를 방문하신 테스터분들이 회원가입시 작성한 정보는 프로필 설정에서 전부 삭제 할 수 있습니다. <br>
+            혹여 삭제를 잊어버리신 경우에도 2021년 9월 30일 모든 데이터를 삭제할 예정이오니 안심하기실 바랍니다.
+        </div>
+        </div>
         <form class="needs-validation col-sm-6 d-grid gap-4" action="#"
               th:action="@{/create-account}" th:object="${createAccountForm}" method="post" novalidate>
             <div class="form-group">
@@ -59,7 +66,7 @@
             <div class="form-group text-center">
                 <button class="btn btn-primary btn-block" type="submit"  aria-describedby="submitHelp">가입하기</button>
                 <small id="submitHelp" class="form-text text-muted">
-                   <p>가입하기 버튼을 누르시면 약관에 동의한것으로 간주합니다.</p>
+                   <p>위 유의사항을 숙지하신뒤, 정보를 입력하고 가입하기 버튼을 누르시면 회원가입을 하실 수 있습니다.</p>
                 </small>
             </div>
         </form>
